Add styles for dendrogram

--- a/static/dendrogram_chart.html
+++ b/static/dendrogram_chart.html
@@ -7,11 +7,11 @@
 
 </head>
 <body >
-    <div id="a1db9e31e12149b8bebcd29c6831bec0" class="chart-container" style="width:1200px; height:900px; "></div>
+    <div id="b734a3527c9347bf8a38b48762598393" class="chart-container" style="width:1200px; height:900px; "></div>
     <script>
-        var chart_a1db9e31e12149b8bebcd29c6831bec0 = echarts.init(
-            document.getElementById('a1db9e31e12149b8bebcd29c6831bec0'), 'light', {renderer: 'canvas'});
-        var option_a1db9e31e12149b8bebcd29c6831bec0 = {
+        var chart_b734a3527c9347bf8a38b48762598393 = echarts.init(
+            document.getElementById('b734a3527c9347bf8a38b48762598393'), 'light', {renderer: 'canvas'});
+        var option_b734a3527c9347bf8a38b48762598393 = {
     "animation": true,
     "animationThreshold": 2000,
     "animationDuration": 1000,
@@ -1041,7 +1041,7 @@
                 }
             ],
             "symbol": "circle",
-            "symbolSize": 7,
+            "symbolSize": 8,
             "edgeShape": "curve",
             "edgeForkPosition": "50%",
             "roam": true,
@@ -1051,8 +1051,12 @@
             "orient": "LR",
             "label": {
                 "show": true,
+                "position": "right",
+                "color": "#fa8072",
                 "margin": 8,
-                "fontSize": 7
+                "fontSize": 10,
+                "fontStyle": "normal",
+                "fontWeight": "bold"
             },
             "leaves": {
                 "label": {
@@ -1065,7 +1069,27 @@
     "legend": [
         {
             "data": [],
-            "selected": {}
+            "selected": {},
+            "show": true,
+            "padding": 5,
+            "itemGap": 10,
+            "itemWidth": 25,
+            "itemHeight": 14,
+            "backgroundColor": "transparent",
+            "borderColor": "#ccc",
+            "borderWidth": 1,
+            "borderRadius": 0,
+            "pageButtonItemGap": 5,
+            "pageButtonPosition": "end",
+            "pageFormatter": "{current}/{total}",
+            "pageIconColor": "#2f4554",
+            "pageIconInactiveColor": "#aaa",
+            "pageIconSize": 15,
+            "animationDurationUpdate": 800,
+            "selector": false,
+            "selectorPosition": "auto",
+            "selectorItemGap": 7,
+            "selectorButtonGap": 10
         }
     ],
     "tooltip": {
@@ -1083,15 +1107,33 @@
         "confine": false,
         "appendToBody": false,
         "transitionDuration": 0.4,
+        "formatter": "{b}",
         "textStyle": {
             "fontSize": 14
         },
         "borderWidth": 0,
         "padding": 5,
         "order": "seriesAsc"
-    }
+    },
+    "title": [
+        {
+            "show": true,
+            "text": "Dendrogram",
+            "target": "blank",
+            "subtext": "Hierarchical Clustering",
+            "subtarget": "blank",
+            "padding": 5,
+            "itemGap": 10,
+            "textAlign": "auto",
+            "textVerticalAlign": "auto",
+            "triggerEvent": false,
+            "textStyle": {
+                "color": "black"
+            }
+        }
+    ]
 };
-        chart_a1db9e31e12149b8bebcd29c6831bec0.setOption(option_a1db9e31e12149b8bebcd29c6831bec0);
+        chart_b734a3527c9347bf8a38b48762598393.setOption(option_b734a3527c9347bf8a38b48762598393);
     </script>
 </body>
 </html>
